--- a/Pipfile
+++ b/Pipfile
@@ -126,6 +126,8 @@ wordcloud = "*"
 seaborn = "*"
 gunicorn = "*"
 gensim = "*"
+sqlalchemy = "*"
+flask-sqlalchemy = "*"
 
 [requires]
 python_version = "3.7"
